# docforge

./: .gitignore  IMPLEMENTATION_SPEC.md  PRD.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
docforge/: __init__.py  cli.py  detector.py  models.py  parser.py  registry.py  structurer.py
docforge/extractors/: __init__.py  base.py  docx_ext.py  email_ext.py  html_ext.py  image.py  pdf.py
docforge/utils/: download.py  ocr.py  table_detect.py
tests/: conftest.py  test_detector.py  test_docx.py  test_email.py  test_html.py  test_image.py  test_ocr.py  test_pdf.py  test_structurer.py
tests/fixtures/: sample.docx  sample.eml  sample.html
